chore: single product
